# weather_api

./: .env_example  .gitignore  Dockerfile  README.md  create_envs.py  create_password.py  deployment.yaml  deployment_azure.yaml  openapi.json  pyproject.toml  service.yaml  service_load_balancer.yaml  test.py
app/: main.py  requirements.txt
app/src/: authentification.py  weather_logic.py
deployment/: config.yaml  deployment.yaml  secret_example.yaml  service.yaml
